--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2018"
 [dependencies]
 frankenstein = "0.4"
 
+log = "0.4"
+env_logger = "0.8"
+
 ureq = { version = "2", features = [ "json" ] }
